# python-shutter-counter

./: .github-ci.yml  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
shutter_counter/: __init__.py  cli.py  counter.py
tests/: test_cli.py  test_shutter_counter.py
